Task with Arrays and Loops (with shortcomings)

--- a/Week_15_Homework/Task 2/index.html
+++ b/Week_15_Homework/Task 2/index.html
@@ -19,8 +19,7 @@
 
 <body>
     <div id="container" class="container border border-dark rounded-3 m-5 bg-light">
-        
-
+        <h1>Циклы и массивы</h1>
     </div>
     <script src="./script.js"></script>
 </body>
